# validatedata

./: .gitignore  .readthedocs.yml  README.md  messages.py  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  validatedata.py  validator.py
.github/workflows/: release.yml  test.yml
docs/: changelog.rst  conf.py  decorators.rst  examples.rst  index.rst  mirror-rules.rst  quickstart.rst  requirements.txt  rules.rst
scripts/: gen_dict_callable.py
tests/: base.py  test_async.py  test_check_rule.py  test_compiled.py  test_core_functions.py  test_examples.py  test_functions.py  test_nested_dict_rules.py  test_nested_shorthand.py  test_new_features.py  test_new_types.py  test_parameterised_types.py  test_shorthand.py  test_types.py
validatedata/: __init__.py  compiled.py  engine.py  messages.py  validatedata.py  validator.py
